# Fractal_Image_Compression

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean.sh  script.sh
img/uncompressed/: Baboon_256.raw  Boat_1024.raw  Boat_256.raw  House.raw  Lake_1024.raw  Lake_256.raw  Lake_512.raw  Lena_1024.raw  Lena_256.raw  Pepper_1024.raw  Pepper_256.raw  Pepper_512.raw  Plane_1024.raw  Plane_256.raw
src/: base.h  base.hpp  coding.c  coding.cpp  coding_func.c  dec.c  dec.cpp  enc.c  enc.cpp  eval.c  eval.cpp  imgio.c  imgio.cpp  index_func.c  indexing.c  indexing.cpp  miscell.c  miscell.cpp  nn_search.c  nns.c  nns.cpp  split.c  split.cpp  split_func.c
src/include/: def.h  globals.h  nn_search.h  nns.h  prot.h
